packages/astro/e2e/fixtures/errors/src/pages/astro-glob-outside-astro.astro
---
import { globSomething } from '../components/AstroGlobOutsideAstro'

globSomething(Astro)
---